--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -9,24 +9,39 @@
     <title> Homepage - Techium </title>
 </head>
 <body>
+    <br>
+    <!--Header-->
     <header>
         <div>
-            <span>
+            <div href="/"><span>
                 Techium
-            </span>
+            </span></div>
             <nav>
+                <a href="/"> Home </a>
+                <a href="#services"> Services</a>
+                <a href="#works"> Works</a>
+                <a href="#about"> About</a>
+                <a href="#latest_news"> Latest news</a>
+                <a href="#testimonials"> Testimonials</a>
+                <a href="#contact"> Contact</a>
 
             </nav>
         </div>
     </header>
 
+    <br>
+    <!--Main-->
     <main>
         <h1> Homepage </h1>
+        <br>
+        <!--Hero section-->
         <section>
             <div>
                 <h2> We help you build your brand! </h2>
             </div>
          </section>
+         <br>
+         <!--Services section-->
         <section>
             <div>
                 <header>
@@ -43,6 +58,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <!--Works section-->
         <section>
             <div>
                 <header>
@@ -62,6 +79,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <!--About Us section-->
         <section>
             <div>
                 <header>
@@ -84,6 +103,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <!--Latest news section-->
         <section>
             <div>
                 <header>
@@ -108,6 +129,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <!--Testimonials section-->
         <section>
             <div>
                 <header>
@@ -121,6 +144,8 @@
                 </div>
             </div>
         </section>
+        <br>
+        <!--Contact section-->
         <section>
             <div>
                 <header>
@@ -135,8 +160,12 @@
     </main>
     <footer>
         <div>
-            Footer
+            <a href="https://www.facebook.com/HolbertonSchool/"> Facebook </a>
+            <a href="https://twitter.com/holbertonschool"> Twitter </a>
+            <a href="https://www.instagram.com/holbertonschool/"> Instagram </a>
         </div>
+        <br>
+        <!--Footer-->
     </footer>
 </body>
 </html>
