--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -167,14 +167,14 @@
                     </details>
                 </div>
             </section>
-	    <br>
-	    <!-- Video -->
-	    <section>
-		    <header>
-			    <h2> Video </h2>
-		    </header>
-		    <vedio src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controlsloop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">sorry, your browser doesn't support HTML5 vedio</vedio>
-	    </section>
+            <br>
+            <!-- Video -->
+            <section>
+                <header>
+                    <h2>Video</h2>
+                </header>
+                <video src="https://intranet-projects-files.s3.amazonaws.com/webstack/BigBuckBunny.mp4" controls loop poster="https://intranet-projects-files.s3.amazonaws.com/webstack/thumbnail.jpg">Sorry, your browser doesn't support HTML5 video</video>
+            </section>
         </main>
         <footer>
 
